[package]
name = "fittotrack-sync"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
dialoguer = "0.10.2"
futures = "0.3.24"
hyper = { version = "0.14.20", features = ["server", "client"] }
memmap = "0.7.0"
nanoid = "0.4.0"
once_cell = "1.14.0"
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.21.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tokio-util = { version = "0.7.3", features = ["io"] }
toml = "0.5.9"
url = { version = "2.2.2", features = ["serde"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
